# advpt

Ex1/: CMakeLists.txt  Matrix.h  MatrixProduct.cpp  MatrixTest.cpp  Matrix_minimal_interface.h
Ex2/: CMakeLists.txt  Matrix.h  MatrixLike.h  Solver.cpp  SolverShort.cpp  SolverTest.cpp  Vector.h  main.cpp  main.h  matrixtest.cpp  matrixtest.h  solver.h  solvershort.h  solvertest.h  stencil.h  vector2.h  vectortest.cpp  vectortest.h
